Implement task status functions.Moving status update from Enum based to Database.
